<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="application_logo">Application logo</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">949848765796508</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb949848765796508</string>

    <!-- MAIN ACTIVITY -->
    <string name="fragment_map_view">I\'m hungry !</string>
    <string name="fragment_list_view">I\'m hungry !</string>
    <string name="fragment_workmates">Available workmates</string>
    <string name="action_search">Search</string>
    <string name="you_have_not_decided_yet">You haven\'t decided yet</string>
    <string name="type_more_than_three_chars">Type at least 3 characters to search</string>

    <!--  DRAWER NAVIGATION  -->
    <string name="menu_your_lunch">YOUR LUNCH</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="menu_logout">LOGOUT</string>

    <!--  BOTTOM NAVIGATION  -->
    <string name="menu_map_view">Map View</string>
    <string name="menu_list_view">List View</string>
    <string name="menu_workmates">Workmates</string>

    <!--  AUTHENTICATION  -->
    <string name="authentication_page_wallpaper">Authentication page wallpaper</string>
    <string name="connection_succeed">Authentication successful !</string>
    <string name="error_authentication_canceled">Authentication canceled…</string>

    <!--  MAPVIEW  -->
    <string name="error_no_internet">No internet connection !</string>
    <string name="error_unknown_error">An unknown error occurred…</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="pick_place">Choose a place</string>

    <!--  RESTAURANT DETAIL  -->
    <string name="title_activity_restaurant_detail" translatable="false">RestaurantDetailActivity</string>
    <string name="restaurant_picture" translatable="false">Restaurant Picture</string>
    <string name="choose_restaurant">You want to lunch at\u0020</string>
    <string name="unchoose_restaurant">You don\'t anymore want to lunch at\u0020</string>
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>
    <string name="is_joining">\u0020is eating here !</string>
    <string name="like_restaurant">You like\u0020</string>
    <string name="unlike_restaurant">You don\'t anymore like\u0020</string>

    <!--  WORKMATES  -->
    <string name="is_eating_at">\u0020is eating at\u0020</string>
    <string name="not_decided_yet">\u0020hasn\'t decided yet</string>

    <!--  LISTVIEW  -->
    <string name="closed">Closed</string>
    <string name="closing_soon">Closing soon</string>
    <string name="open_until">"Open until\u0020"</string>
    <string name="always_open">Open 24/7</string>

    <!--  LOGOUT  -->
    <string name="you_will_be_disconnected">You will be disconnected</string>
    <string name="disconnection_successful">Disconnection successful !</string>
    <string name="disconnection_unsuccessful">Disconnection unsuccessful, something went wrong…</string>

    <!-- SETTINGS -->
    <string name="your_name">Your name or pseudo</string>
    <string name="your_photo_url">Your photo URL</string>
    <string name="reminder">Reminding notification</string>
    <string name="delete_your_account">Delete your account</string>
    <string name="validate">Validate</string>
    <string name="changes_made">Changes made !</string>
    <string name="no_changes_made">No changes made</string>
    <string name="delete">DELETE</string>

    <!-- NOTIFICATION SERVICE -->
    <string name="default_notification_channel_id" translatable="false">g4l_default_channel</string>
    <string name="you_lunch_at">"You lunch at\u0020"</string>
    <string name="alone">You will lunch alone…</string>
    <string name="with">"with:\u0020"</string>
    <string name="and">\u0020and\u0020</string>
    <string name="account_deleted">Your account and all data have been deleted</string>
</resources>