<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_map_view">

    <fragment
        android:id="@+id/nav_map_view"
        android:name="com.jr_eagle_ocr.go4lunch.ui.mapview.MapsViewFragment"
        android:label="@string/fragment_map_view"
        tools:layout="@layout/fragment_mapsview" />

    <fragment
        android:id="@+id/nav_list_view"
        android:name="com.jr_eagle_ocr.go4lunch.ui.listview.ListViewFragment"
        android:label="@string/fragment_list_view"
        tools:layout="@layout/fragment_listview" />

    <fragment
        android:id="@+id/nav_workmates"
        android:name="com.jr_eagle_ocr.go4lunch.ui.workmates.WorkmatesFragment"
        android:label="@string/fragment_workmates"
        tools:layout="@layout/fragment_workmates" />

    <activity
        android:id="@+id/nav_your_lunch"
        android:name="com.jr_eagle_ocr.go4lunch.ui.restaurant_detail.RestaurantDetailActivity"
        android:label="@string/menu_your_lunch"
        tools:layout="@layout/activity_restaurant_detail" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.jr_eagle_ocr.go4lunch.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <dialog
        android:id="@+id/nav_logout"
        android:name="com.jr_eagle_ocr.go4lunch.ui.logout.LogOutDialogFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>